--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,10 @@ cloudinary==1.29.0
 colorama==0.4.4
 config==0.5.1
 decorator==5.1.1
+dj-database-url==0.5.0
 Django==4.0.4
 django-bootstrap-v5==1.0.11
+django-heroku==0.3.1
 django-mapbox-location-field==2.0.0
 folium==0.12.1.post1
 frozenlist==1.3.0
@@ -28,6 +30,7 @@ maxminddb==2.2.0
 multidict==6.0.2
 numpy==1.22.3
 Pillow==9.1.0
+psycopg2==2.9.3
 python-decouple==3.6
 ratelim==0.1.6
 requests==2.27.1
@@ -36,4 +39,5 @@ soupsieve==2.3.2
 sqlparse==0.4.2
 tzdata==2022.1
 urllib3==1.26.9
+whitenoise==6.0.0
 yarl==1.7.2
